--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,18 @@
 body {
     display: flex;
     justify-content: center;
+    height: 100vh;
+    align-items: center;
+    overflow: hidden;
+    
 }
 
 .board{
     display: flex;
     flex-direction: column;
     gap: 5px;
+    align-self: center;
+    justify-content: center;
 }
 
 
@@ -41,4 +47,14 @@ body {
 
 .wrong {
     background-color: lightgray;
+}
+
+
+img {
+    position: absolute;
+    height: fit-content;
+    width: fit-content;
+    top: 0;
+    left: 0;
+    z-index: -1;
 }
